--- a/example/index.html
+++ b/example/index.html
@@ -11,7 +11,7 @@
     <body>
 
         <div id="lookup">
-            <input type="text" id="address-lookup" />
+            <input type="text" id="address-lookup" placeholder="Address..." autocomplete="off" />
         </div>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
